--- a/front/package.json
+++ b/front/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.4",
     "three": "^0.157.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
