--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gltf": "^1.0.3",
+    "gltfjsx": "^6.2.16",
     "jotai": "^2.6.3",
     "leva": "^0.9.35",
     "react": "^18.2.0",
