--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gltfjsx": "^6.2.16",
     "jotai": "^2.6.3",
+    "jsdom-global": "^3.0.2",
     "leva": "^0.9.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
