--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "gltf": "^1.0.3",
     "gltfjsx": "^6.2.16",
+    "howler": "^2.2.4",
     "jotai": "^2.6.3",
     "jsdom-global": "^3.0.2",
     "leva": "^0.9.35",
