--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "socket.io-client": "^4.7.4",
     "three": "^0.157.0",
     "web-vitals": "^2.1.4",
