--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "date-utils": "^1.2.21",
     "socket.io": "^4.7.4"
   },
   "devDependencies": {
