--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "babel-plugin-glsl": "^1.0.0",
+    "framer-motion-3d": "^11.0.3",
     "gsap": "^3.12.5",
     "howler": "^2.2.4",
     "jotai": "^2.6.3",
