--- a/front/package.json
+++ b/front/package.json
@@ -9,14 +9,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.2",
     "howler": "^2.2.4",
     "jotai": "^2.6.3",
     "jsdom-global": "^3.0.2",
     "leva": "^0.9.35",
     "react": "^18.2.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "reactstrap": "^9.2.2",
     "socket.io-client": "^4.7.4",
     "three": "^0.157.0",
     "web-vitals": "^2.1.4",
