--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "test node",
   "main": "index.jsx",
-  "proxy": "http://localhost:5000",
+  "proxy": "http://ec2-3-34-179-188.ap-northeast-2.compute.amazonaws.com:5000",
   "scripts": {
     "start": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
