--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
-GOOGLE_CLIENT_ID = '107173313275-cbgar3a9dvkm5gmeq88ftaatu1i7qqse.apps.googleusercontent.com';
-GOOGLE_CLIENT_SECRET = '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';
-GOOGLE_REDIRECT_URI = 'http://localhost:3000/auth/google';
+GOOGLE_CLIENT_ID="107173313275-r3d4eh0tc407jcc41bmbajm8vdd6s9uh.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET='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'
+
+# NODE_ENV='production'
