--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 GOOGLE_CLIENT_ID="107173313275-r3d4eh0tc407jcc41bmbajm8vdd6s9uh.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET='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'
 
-# NODE_ENV='production'
+NODE_ENV='production'
