--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,7 @@
 GOOGLE_CLIENT_ID="107173313275-66vuckhpphdgervuljgr4p7n9gusmj7a.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET='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'
 
-NODE_ENV='production'
+NAVER_CLIENT_ID="eTZKcA8cBUyD9GuH156Q"
+NAVER_CLIENT_SECRET="TDFzNtO_6m"
+
+# NODE_ENV='production'
