종료화면 구현

--- a/server/.env
+++ b/server/.env
@@ -4,4 +4,4 @@ GOOGLE_CLIENT_SECRET='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'
 NAVER_CLIENT_ID="eTZKcA8cBUyD9GuH156Q"
 NAVER_CLIENT_SECRET="TDFzNtO_6m"
 
-NODE_ENV='production'
+# NODE_ENV='production'
