--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "date-utils": "^1.2.21",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.7.4"
