--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-glsl": "^1.0.0",
     "bootstrap": "^5.3.2",
     "framer-motion-3d": "^11.0.3",
+    "gltfjsx": "^6.2.16",
     "gsap": "^3.12.5",
     "howler": "^2.2.4",
     "jotai": "^2.6.3",
@@ -22,6 +23,7 @@
     "leva": "^0.9.35",
     "lil-gui": "^0.19.1",
     "meshline": "^3.2.0",
+    "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
