--- a/front/package.json
+++ b/front/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/joy": "^5.0.0-beta.28",
+    "@mui/material": "^5.15.10",
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.82.0",
     "@react-three/fiber": "^8.14.3",
